# ATMOS-Plataforma-Web-de-Analitica-Ambiental

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-azure-appservice.yml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: analytics.py  auth.py  etl.py  health.py  stations.py
apps/backend/app/core/: config.py
apps/backend/app/db/: __init__.py  init_db.py
apps/backend/app/models/: __init__.py  etl_run.py  measurement.py  source_file.py  station.py  variable.py
apps/backend/app/schemas/: __init__.py  analytics.py  auth.py  etl.py  station.py
apps/backend/app/services/: __init__.py  analytics_service.py  auth_service.py  health_service.py  station_reference.py  station_service.py
apps/backend/app/services/etl/: __init__.py  contracts.py  helpers.py  pipeline.py
apps/backend/data/etl/extracted/4751acb97e4f-4751acb97e4f-IUV/: IUV.xlsx
apps/backend/data/etl/extracted/c560dba6d153-c560dba6d153-PM10-1/: c560dba6d153-PM10-1.xlsx
apps/backend/data/etl/raw/: 4751acb97e4f-IUV.rar  4e1f514ef0d9-PM10.rar
apps/backend/tests/: test_health.py
apps/frontend/: .eslintrc.cjs  Dockerfile  README.figma.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: main.tsx
apps/frontend/src/api/: http-client.ts
docs/: architecture.md  deployment-azure.md
infra/azure/: README.md
(+27 files in other folders)
