[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmos-backend"
version = "0.1.0"
description = "ATMOS backend API base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pandas>=2.2.3,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "xlrd>=2.0.1,<3.0.0",
  "rarfile>=4.2,<5.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "alembic>=1.15.1,<2.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "python-jose[cryptography]>=3.4.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.11.0,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
